--- a/EECIP/Views/Admin/Users.cshtml
+++ b/EECIP/Views/Admin/Users.cshtml
@@ -30,7 +30,7 @@
                         <td>
                             <a href="@Url.Action("UserProfile","Account", new { id=item.users.USER_IDX, a="a" })" class="btn btn-rounded btn-xs btn-info"><i class="glyphicon glyphicon-pencil"></i></a>
                             <div class="delete-section" style="display:inline">
-                                <a class=" btn btn-rounded btn-xs btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
+                                <a class=" btn btn-rounded btn-xs btn-icon btn-danger delete-link"><i class="glyphicon glyphicon-remove"></i></a>
                                 <div class="btn btn-rounded btn-xs btn-warning delete-confirm" style="display:none" data-delete-id="@item.users.USER_IDX" data-delete-p="/Admin/UserDelete"><b>Confirm Delete</b></div>
                             </div>
                         </td>
