--- a/EECIP/Views/Account/Register.cshtml
+++ b/EECIP/Views/Account/Register.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
-@using (Html.BeginForm("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "panel-body wrapper-lg", @id= "norepostform" }))
+@using (Html.BeginForm("Register", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "panel-body wrapper-lg", @id = "norepostform" }))
 {
     @Html.AntiForgeryToken()
 
@@ -24,7 +24,7 @@
     <div class="form-group">
         @Html.LabelFor(m => m.UserName, new { @class = "" })
         <i class=" m-l-xs fa fa-question-circle" data-toggle="tooltip" data-placement="top" data-original-title="Only one account allowed per email address."></i>
-        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control input-lg focus", @placeholder = "test@example.com", @type="email" })
+        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control input-lg focus", @placeholder = "test@example.com", @type = "email" })
         @Html.ValidationMessageFor(m => m.UserName)
         <span class="help-block"><i class="clip-info"></i> Registration is only available for government employees. Please register using a government-issued email.</span>
     </div>
@@ -52,22 +52,27 @@
 
     if (Model.ddl_Agencies != null)
     {
-    <div class="form-group">
+        <div class="form-group">
             <label class="control-label">Which Agency</label>
             <i class=" m-l-xs fa fa-question-circle" data-toggle="tooltip" data-placement="top" data-original-title="If your agency is not listed, you can still register, however your account approval may be delayed as it is manually processed."></i>
-   
+
             @Html.DropDownListFor(model => model.intSelOrgIDX, Model.ddl_Agencies, "-Please Select-", new { @class = "form-control input-lg m-b" })
             @Html.ValidationMessageFor(m => m.intSelOrgIDX)
-    </div>
+        </div>
     }
 
     if (Model.suggestAgencyInd == true)
     {
-    <div class="form-group">
-        Your Agency Name
-        @Html.TextBoxFor(m => m.suggestAgency, new { @class = "form-control input-lg", })
-        @Html.ValidationMessageFor(m => m.suggestAgency)
-    </div>
+        <div class="form-group">
+            Your Agency Name
+            @Html.TextBoxFor(m => m.suggestAgency, new { @class = "form-control input-lg", })
+            @Html.ValidationMessageFor(m => m.suggestAgency)
+        </div>
+        <div class="form-group">
+            Organization Type
+            @Html.DropDownListFor(model => model.suggestOrgType, Model.ddl_OrgTypes, "-Please Select-", new { @class = "form-control input-lg m-b" })
+            @Html.ValidationMessageFor(m => m.suggestOrgType)
+        </div>
     }
 
     <div class="checkbox">
@@ -76,7 +81,7 @@
             I accept the Terms And Conditions
         </label>
     </div>
-    
+
     <div class="panel-group accordion-custom accordion-teal" id="accordion">
         <div class="panel panel-default">
             <div class="panel-heading">
